<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Allgemein -->
    <string name="app_name">ArtmannWiki</string>
    <string name="title_activity_choice">ArtmannWiki</string>
    <string name="categories">Kategorien</string>
    <string name="title_activity_new_account">Neuer Account</string>
    <string name="title_activity_new_device">Neues Handy/Tablet</string>
    <string name="title_activity_new_insurance">Neue Versicherung</string>
    <string name="title_activity_new_entity">Neuer Eintrag</string>
    <string name="title_activity_new_login">Neuer Login</string>
    <string name="title_activity_new_miscellaneous">Neue Notiz</string>
    <string name="title_activity_new_mail">Neue E-Mail</string>
    <string name="title_activity_single_category">Einzelkategorie</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_quit">Beenden</string>
    <string name="action_save">Speichern</string>
    <string name="action_delete">Löschen</string>
    <string name="action_sync">Synchronisieren</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="hint_password">Passwort</string>
    <string name="hint_username">Benutzername</string>
    <string name="hint_password_repeat">Passwort wiederholen</string>
    <string name="hint_number">Nummer</string>
    <string name="hint_pin">Pin</string>
    <string name="hint_puk">Puk</string>
    <string name="action_hint_mail">E-Mail</string>
    <string name="prompt_saved_succesfully">Eintrag erfolgreich gespeichert</string>
    <string name="prompt_all_fields_must_be_filled">Jedes Feld muss ausgefüllt sein</string>
    <string name="prompt_fill_this_field">Bitte ausfüllen</string>
    <string name="text_required_fields">Die gekennzeichneten Felder(*) sind Pflichtfelder!</string>
    
    <!-- NewAccount -->
	<string name="hint_owner">Eigentümer</string>
	<string name="hint_iban">Iban</string>
	<string name="hint_bic">Bic</string>
	
	<!-- NewDevice -->
	<string name="action_new_device">Handy/Tablet</string>
	
	<!-- NewInsurance -->
	<string name="hint_name">Name</string>
	<string name="hint_kind">Art</string>
	<string name="hint_membershipId">Mitgliedsnummer</string>
	
	<!-- NewMiscellaneous -->
	<string name="hint_text">Text</string>
	<string name="hint_description">Beschreibung</string>
	
	<!-- CategoryListSearch -->
	<string name="categorylist_action_search">Suche</string>
	<string name="categorylist_hint_search">Volltextsuche</string>

    <!-- Spezifisch -->
    <string name="action_choice_new_input">Wiki Eintrag erstellen</string>
    <string name="action_choice_search">Wiki durchsuchen</string>
    
    <string name="prompt_register">Bitte ein Passwort ihrer Wahl eingeben.\nMindestens 6 Zeichen sind erfolderlich.</string>
    <string name="prompt_password_invalid">Passwort ungültig</string>
    <string name="prompt_password_unidentical">Passwort nicht identisch</string>
    <string name="prompt_password_too_short">Passwort zu kurz</string>
    <string name="hint_new_login_info">Beschreibung</string>
    <string name="prompt_categorylist_spinner">Wähle eine Kategorie</string>
    <string name="account">Bankkonto</string>
    <string name="device">Gerät</string>
    <string name="email">E-Mail</string>
	<string name="insurance">Versicherung</string>
	<string name="login">Login</string>
	<string name="miscellaneous">Diverse/Notizen</string>
	<string name="activity_search_singleentity_textview_button">Zeige sensible Daten</string>
    
    <!-- Farben -->
    <drawable name="white">#ffffff</drawable>
    <drawable name="blue">#2554C7</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="orange">#ff9900</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="gray">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="mistyrose">#FBBBB9</drawable>
    <drawable name="screen_background_holo_light">#fff3f3f3</drawable>
    <drawable name="screen_background_holo_dark">#ff000000</drawable>
    <drawable name="darkgrey">#606060</drawable>
    <color name="background_holo_dark">#ff000000</color>
    <color name="background_holo_light">#fff3f3f3</color>

    <!-- blafoo -->
    <string name="hello_world">Hello world!</string>
    
    <!-- Descriptions -->
    <string name="categorylistitemicon">Image of the category list items</string>
    <string name="customspinnericon">Image of the custom spinner</string>
    
    <!-- NavigationDrawer -->
    <string name="drawer_imageview">image view for the navigationsbar</string>
    <string name="drawer_listitem">single list item for each navbar fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>
