<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.davidartmann.artmannwiki.android.NewLogin">

    <EditText
        android:id="@+id/new_login_edittext_username"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxLength="25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/new_login_edittext_password"
        android:inputType="textPassword"
        android:maxLength="30"
        android:layout_below="@+id/new_login_edittext_username"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/new_login_edittext_password_repeat"
        android:inputType="textPassword"
        android:maxLength="30"
        android:hint="@string/hint_password_repeat"
        android:layout_below="@+id/new_login_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/new_login_edittext_info"
        android:inputType="text"
        android:maxLength="30"
        android:hint="@string/hint_new_login_info"
        android:layout_below="@+id/new_login_edittext_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/new_login_button_save"
        android:layout_below="@+id/new_login_edittext_info"
        android:text="@string/action_save"
        style="?android:textAppearanceSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/new_login_textview_note"
        android:layout_marginTop="10sp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/text_required_fields"
        android:layout_below="@id/new_login_button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
