<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.davidartmann.artmannwiki.android.NewDevice">

    <EditText
        android:id="@+id/new_device_edittext_device"
        android:hint="@string/action_new_device"
        android:inputType="text|textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/new_device_edittext_number"
        android:inputType="numberSigned"
        android:layout_below="@id/new_device_edittext_device"
        android:hint="@string/hint_number"
        android:maxLength="25"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/new_device_edittext_pin"
        android:inputType="number|numberPassword"
        android:layout_below="@+id/new_device_edittext_number"
        android:hint="@string/hint_pin"
        android:maxLength="4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/new_device_edittext_puk"
        android:inputType="number|numberPassword"
        android:maxLength="8"
        android:layout_below="@+id/new_device_edittext_pin"
        android:hint="@string/hint_puk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/new_device_button_save"
        android:layout_below="@+id/new_device_edittext_puk"
        android:text="@string/action_save"
        style="?android:textAppearanceSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
