<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_new_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/activity_new_account_edittext_owner"
        android:hint="@string/hint_owner"
        android:maxLength="25"
        android:inputType="text|textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_new_account_edittext_iban"
        android:inputType="numberSigned"
        android:layout_below="@id/activity_new_account_edittext_owner"
        android:hint="@string/hint_iban"
        android:maxLength="25"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_new_account_edittext_bic"
        android:inputType="numberSigned"
        android:layout_below="@+id/activity_new_account_edittext_iban"
        android:hint="@string/hint_bic"
        android:maxLength="25"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_new_account_edittext_pin"
        android:inputType="numberPassword"
        android:maxLength="20"
        android:layout_below="@+id/activity_new_account_edittext_bic"
        android:hint="@string/hint_pin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/activity_new_account_button_save"
        android:layout_below="@+id/activity_new_account_edittext_pin"
        android:layout_marginTop="20dip"
        android:text="@string/action_save"
        android:background="@layout/button_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
