<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_new_insurance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/activity_new_insurance_edittext_name"
        android:hint="@string/hint_name"
        android:maxLength="50"
        android:inputType="text|textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_new_insurance_edittext_kind"
        android:inputType="text|textMultiLine"
        android:layout_below="@id/activity_new_insurance_edittext_name"
        android:hint="@string/hint_kind"
        android:maxLength="50"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_new_insurance_edittext_membershipId"
        android:inputType="numberSigned"
        android:layout_below="@+id/activity_new_insurance_edittext_kind"
        android:hint="@string/hint_membershipId"
        android:maxLength="40"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/activity_new_insurance_button_save"
        android:layout_below="@+id/activity_new_insurance_edittext_membershipId"
        android:layout_marginTop="20dip"
        android:text="@string/action_save"
        android:background="@layout/button_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>