<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_new_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/activity_new_miscellaneous_edittext_text"
        android:hint="@string/hint_text"
        android:maxLength="100"
        android:inputType="text|textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/activity_new_miscellaneous_edittext_description"
        android:inputType="text|textMultiLine"
        android:layout_below="@id/activity_new_miscellaneous_edittext_text"
        android:hint="@string/hint_description"
        android:maxLength="150"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/activity_new_miscellaneous_button_save"
        android:layout_below="@+id/activity_new_miscellaneous_edittext_description"
        android:layout_marginTop="20dip"
        android:text="@string/action_save"
        android:background="@layout/button_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>